[gd_scene load_steps=2 format=3 uid="uid://fishing"]

[ext_resource type="Script" path="res://src/ui/fishing/fishing.gd" id="1_script"]

[node name="Fishing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.25, 0.35, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "낚시"
horizontal_alignment = 1

[node name="GameArea" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="Margin" type="MarginContainer" parent="VBox/GameArea"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxGame" type="VBoxContainer" parent="VBox/GameArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HintLabel" type="Label" parent="VBox/GameArea/Margin/VBoxGame"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "타이밍을 맞춰 클릭하세요!"
horizontal_alignment = 1

[node name="BarContainer" type="Control" parent="VBox/GameArea/Margin/VBoxGame"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="BarBackground" type="ColorRect" parent="VBox/GameArea/Margin/VBoxGame/BarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="TargetZone" type="ColorRect" parent="VBox/GameArea/Margin/VBoxGame/BarContainer"]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 0.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 0
color = Color(0.2, 0.8, 0.3, 0.4)

[node name="BarIndicator" type="ColorRect" parent="VBox/GameArea/Margin/VBoxGame/BarContainer"]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 0.0
offset_right = 8.0
offset_bottom = 80.0
grow_horizontal = 0
color = Color(1, 0.9, 0.2, 1)

[node name="StatusLabel" type="Label" parent="VBox/GameArea/Margin/VBoxGame"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "준비..."
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="VBox/GameArea/Margin/VBoxGame"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.25, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="ResultSprite" type="TextureRect" parent="VBox/GameArea/Margin/VBoxGame"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StartButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "낚시 시작"

[node name="CatchButton" type="Button" parent="VBox/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "잡기!"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "돌아가기"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "게임 방법"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "낚시 방법..."
autowrap_mode = 3

[node name="CloseBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "닫기"
